<resources>
    <string name="app_name">Musicapp</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="titulo1">TÍTULO 1</string>
    <string name="titulo2">TÍTULO 2</string>
    <string name="titulo3">TÍTULO 3</string>
    <string name="titulo4">TÍTULO 4</string>
    <string name="login_title">Título</string>
    <string name="start_session">Sesion</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="remember_user_switch_space">remember user</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="dont_have_a_account">Dont have a account</string>
    <string name="remember_user_on_device">Remember user on device</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

</resources>
